crates/fluvio-protocol-derive/tests/ui/fail/fails_missing_fluvio_annotation_and_discriminant_on_enums.stderr
error: You must either provide a `tag` or a discriminant for enum types deriving Encode/Decode
 --> tests/ui/fail/fails_missing_fluvio_annotation_and_discriminant_on_enums.rs:5:5
  |
5 |     #[default]
  |     ^
